# space-helper

./: CMakeLists.txt  README.md
dispatcher/: CMakeLists.txt  SDispatcher.h  main.cpp
vectorization/: sliding_window.py
