cmake_minimum_required (VERSION 3.10)
# ---------------------------------------------------------
# Dispatcher target
# ---------------------------------------------------------
add_executable(Dispatcher 
	main.cpp
)
# ---------------------------------------------------------
# End
# ---------------------------------------------------------